自定义安装位置

--- a/alertd/Dockerfile
+++ b/alertd/Dockerfile
@@ -2,6 +2,8 @@ FROM cloudwiz/openjdk
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
 ARG PKG_URL
+ARG INSTALL_ROOT
+ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 ENV URL ${PKG_URL:-http://download.cloudwiz.cn/package}
 ENV JAVA_HOME /usr/lib/jvm/java
@@ -9,10 +11,11 @@ ENV USER=root
 
 RUN set -x \
     && curl -fSL "$URL/cloudwiz-daemon.tar.gz" -o /tmp/cloudwiz-daemon.tar.gz \
-    && tar -xvf /tmp/cloudwiz-daemon.tar.gz -C /opt/ \
-    && mv /opt/cloudwiz-daemon /opt/alertd \
+    && mkdir -p ${INSTALL_ROOT} \
+    && tar -xvf /tmp/cloudwiz-daemon.tar.gz -C ${INSTALL_ROOT} \
+    && mv ${INSTALL_ROOT}/cloudwiz-daemon ${INSTALL_ROOT}/alertd \
     && rm /tmp/cloudwiz-daemon.tar.gz* \
-    && ln -s /usr/lib/jvm/java  /opt/jdk
+    && ln -s /usr/lib/jvm/java  ${INSTALL_ROOT}/jdk
 
 ADD start.sh /start.sh
 RUN chmod +x /start.sh
@@ -29,21 +32,21 @@ RUN set -x \
     && fc-cache -fv \
     && yum -y install libXrender libXext fontconfig \
     && curl -fSL "$URL/phantomjs-2.1.1-linux-x86_64.tar.gz" -o /tmp/phantomjs-2.1.1-linux-x86_64.tar.gz \
-    && tar -xvf /tmp/phantomjs-2.1.1-linux-x86_64.tar.gz -C /opt/ \
-    && mv /opt/phantomjs-2.1.1-linux-x86_64 /opt/phantomjs \
+    && tar -xvf /tmp/phantomjs-2.1.1-linux-x86_64.tar.gz -C ${INSTALL_ROOT}/ \
+    && mv ${INSTALL_ROOT}/phantomjs-2.1.1-linux-x86_64 ${INSTALL_ROOT}/phantomjs \
     && rm /tmp/phantomjs-2.1.1-linux-x86_64.tar.gz* \
     && curl -fSL "$URL/wkhtmltox-0.12.4_linux-generic-amd64.tar.gz" -o /tmp/wkhtmltox-0.12.4_linux-generic-amd64.tar.gz \
-    && tar -xvf /tmp/wkhtmltox-0.12.4_linux-generic-amd64.tar.gz -C /opt/ \
+    && tar -xvf /tmp/wkhtmltox-0.12.4_linux-generic-amd64.tar.gz -C ${INSTALL_ROOT} \
     && rm /tmp/wkhtmltox-0.12.4_linux-generic-amd64.tar.gz* \
     && curl -fSL "$URL/pandoc-2.0.5-linux.tar.gz" -o /tmp/pandoc-2.0.5-linux.tar.gz \
-    && tar -xvf /tmp/pandoc-2.0.5-linux.tar.gz -C /opt/ \
-    && mv /opt/pandoc-2.0.5 /opt/pandoc \
+    && tar -xvf /tmp/pandoc-2.0.5-linux.tar.gz -C ${INSTALL_ROOT} \
+    && mv ${INSTALL_ROOT}/pandoc-2.0.5 ${INSTALL_ROOT}/pandoc \
     && rm /tmp/pandoc-2.0.5-linux.tar.gz* \
-    && mkdir -p /opt/report_tmp/
+    && mkdir -p ${INSTALL_ROOT}/report_tmp/
 
 EXPOSE 5001
 EXPOSE 7001
 EXPOSE 9999
 
-ENTRYPOINT ["/start.sh"]
+ENTRYPOINT /start.sh
 
