--- a/log-pp/Dockerfile
+++ b/log-pp/Dockerfile
@@ -2,20 +2,23 @@ FROM cloudwiz/openjdk
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
 ARG PKG_URL
+ARG INSTALL_ROOT
+ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 ENV URL ${PKG_URL:-http://download.cloudwiz.cn/package}/cloudwiz-log-pp.tar.gz
 ENV JAVA_HOME /usr/lib/jvm/java
 
 RUN set -x \
     && curl -fSL "$URL" -o /tmp/cloudwiz-log-pp.tar.gz \
-    && tar -xvf /tmp/cloudwiz-log-pp.tar.gz -C /opt/ \
-    && mv /opt/cloudwiz-log-pp /opt/log-pp \
+    && mkdir -p ${INSTALL_ROOT} \
+    && tar -xvf /tmp/cloudwiz-log-pp.tar.gz -C ${INSTALL_ROOT} \
+    && mv ${INSTALL_ROOT}/cloudwiz-log-pp ${INSTALL_ROOT}/log-pp \
     && rm /tmp/cloudwiz-log-pp.tar.gz* \
-    && ln -s /usr/lib/jvm/java  /opt/jdk
+    && ln -s /usr/lib/jvm/java  ${INSTALL_ROOT}/jdk
 
 
 ENV USER=root
 
 EXPOSE 5045
 
-CMD ["/opt/log-pp/bin/start.sh"]
+CMD ${INSTALL_ROOT}/log-pp/bin/start.sh
