--- a/webfront/Dockerfile
+++ b/webfront/Dockerfile
@@ -2,13 +2,16 @@ FROM cloudwiz/openjdk
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
 ARG PKG_URL
+ARG INSTALL_ROOT
+ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 ENV URL ${PKG_URL:-http://download.cloudwiz.cn/package}/webfront.tar.gz
 ENV USER=root
 
 RUN set -x \
     && curl -fSL "$URL" -o /tmp/webfront.tar.gz \
-    && tar -xvf /tmp/webfront.tar.gz -C /opt/ \
+    && mkdir -p ${INSTALL_ROOT} \
+    && tar -xvf /tmp/webfront.tar.gz -C ${INSTALL_ROOT} \
     && rm /tmp/webfront.tar.gz* \
     && mkdir /public
 
@@ -17,4 +20,4 @@ RUN chmod +x /start.sh
 
 EXPOSE 3000
 
-ENTRYPOINT ["/start.sh"]
+ENTRYPOINT /start.sh
