--- a/cloudwiz-user/Dockerfile
+++ b/cloudwiz-user/Dockerfile
@@ -2,18 +2,21 @@ FROM centos:7
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
 ARG PKG_URL
+ARG INSTALL_ROOT
+ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 ENV NODE_URL ${PKG_URL:-http://download.cloudwiz.cn/package}/node-v10.0.0-linux-x64.tgz
 ENV URL ${PKG_URL:-http://download.cloudwiz.cn/package}/cloudwiz-user.tar.gz
 
 RUN set -x \
     && curl -fSL "$NODE_URL" -o /tmp/node-v10.0.0-linux-x64.tgz \
-    && tar -xvf /tmp/node-v10.0.0-linux-x64.tgz -C /opt/ \
+    && mkdir -p ${INSTALL_ROOT} \
+    && tar -xvf /tmp/node-v10.0.0-linux-x64.tgz -C ${INSTALL_ROOT} \
     && rm /tmp/node-v10.0.0-linux-x64.tgz* \
-    && mv /opt/node-v10.0.0-linux-x64 /opt/node \
+    && mv ${INSTALL_ROOT}/node-v10.0.0-linux-x64 ${INSTALL_ROOT}/node \
 
     && curl -fSL "$URL" -o /tmp/cloudwiz-user.tar.gz \
-    && tar -xvf /tmp/cloudwiz-user.tar.gz -C /opt/ \
+    && tar -xvf /tmp/cloudwiz-user.tar.gz -C ${INSTALL_ROOT} \
     && rm /tmp/cloudwiz-user.tar.gz* 
 
 ENV USER=root
@@ -21,4 +24,4 @@ ENV NODE_ENV=production
 
 EXPOSE 7002
 
-CMD ["/opt/node/bin/node","/opt/cloudwiz-user/server.js"]
+CMD ${INSTALL_ROOT}/node/bin/node ${INSTALL_ROOT}/cloudwiz-user/server.js
