--- a/hbase-base/Dockerfile
+++ b/hbase-base/Dockerfile
@@ -2,6 +2,8 @@ FROM cloudwiz/openjdk
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
 ARG PKG_URL
+ARG INSTALL_ROOT
+ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 ENV HBASE_VERSION  1.4.10
 ENV HBASE_URL ${PKG_URL:-http://download.cloudwiz.cn/package}/hbase-$HBASE_VERSION-bin.tar.gz
@@ -9,15 +11,16 @@ ENV JAVA_HOME /usr/lib/jvm/java
 
 RUN set -x \
     && curl -fSL "$HBASE_URL" -o /tmp/hbase.tar.gz \
-    && tar -xvf /tmp/hbase.tar.gz -C /opt/ \
+    && mkdir -p ${INSTALL_ROOT} \
+    && tar -xvf /tmp/hbase.tar.gz -C ${INSTALL_ROOT} \
     && rm /tmp/hbase.tar.gz*
 
-RUN ln -s /opt/hbase-$HBASE_VERSION/conf /etc/hbase
-RUN mkdir /opt/hbase-$HBASE_VERSION/logs
+RUN ln -s ${INSTALL_ROOT}/hbase-$HBASE_VERSION/conf /etc/hbase
+RUN mkdir ${INSTALL_ROOT}/hbase-$HBASE_VERSION/logs
 
 RUN mkdir /hadoop-data
 
-ENV HBASE_PREFIX=/opt/hbase-$HBASE_VERSION
+ENV HBASE_PREFIX=${INSTALL_ROOT}/hbase-$HBASE_VERSION
 ENV HBASE_CONF_DIR=/etc/hbase
 
 ENV USER=root
