--- a/log-analysis/Dockerfile
+++ b/log-analysis/Dockerfile
@@ -2,20 +2,23 @@ FROM cloudwiz/openjdk
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
 ARG PKG_URL
+ARG INSTALL_ROOT
+ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 ENV URL ${PKG_URL:-http://download.cloudwiz.cn/package}/cloudwiz-log-analysis.tar.gz
 ENV JAVA_HOME /usr/lib/jvm/java
 
 RUN set -x \
     && curl -fSL "$URL" -o /tmp/cloudwiz-log-analysis.tar.gz \
-    && tar -xvf /tmp/cloudwiz-log-analysis.tar.gz -C /opt/ \
-    && mv /opt/cloudwiz-log-analysis /opt/log-analysis \
+    && mkdir -p ${INSTALL_ROOT} \
+    && tar -xvf /tmp/cloudwiz-log-analysis.tar.gz -C ${INSTALL_ROOT} \
+    && mv ${INSTALL_ROOT}/cloudwiz-log-analysis ${INSTALL_ROOT}/log-analysis \
     && rm /tmp/cloudwiz-log-analysis.tar.gz* \
-    && ln -s /usr/lib/jvm/java  /opt/jdk
+    && ln -s /usr/lib/jvm/java  ${INSTALL_ROOT}/jdk
 
 
 ENV USER=root
 
 EXPOSE 9400
 
-CMD ["/opt/log-analysis/bin/start.sh"]
+CMD ${INSTALL_ROOT}/log-analysis/bin/start.sh
