--- a/oneagent/Dockerfile
+++ b/oneagent/Dockerfile
@@ -2,19 +2,22 @@ FROM cloudwiz/openjdk
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
 ARG PKG_URL
+ARG INSTALL_ROOT
+ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 ENV URL ${PKG_URL:-http://download.cloudwiz.cn/package}/oneagent.tar.gz
 ENV JAVA_HOME /usr/lib/jvm/java
 
 RUN set -x \
     && curl -fSL "$URL" -o /tmp/oneagent.tar.gz \
-    && tar -xvf /tmp/oneagent.tar.gz -C /opt/ \
+    && mkdir -p ${INSTALL_ROOT} \
+    && tar -xvf /tmp/oneagent.tar.gz -C ${INSTALL_ROOT} \
     && rm /tmp/oneagent.tar.gz* \
-    && ln -s /usr/lib/jvm/java  /opt/jdk
+    && ln -s /usr/lib/jvm/java  ${INSTALL_ROOT}/jdk
 
 
 ENV USER=root
 
 EXPOSE 8888
 
-CMD ["/opt/oneagent/bin/start.sh"]
+CMD ${INSTALL_ROOT}/oneagent/bin/start.sh
