--- a/opentsdb/Dockerfile
+++ b/opentsdb/Dockerfile
@@ -2,6 +2,8 @@ FROM cloudwiz/openjdk
 MAINTAINER haiyuan he <haiyuan.he@cloudwiz.cn>
 
 ARG PKG_URL
+ARG INSTALL_ROOT
+ENV INSTALL_ROOT ${INSTALL_ROOT}
 
 ENV OPENTSDB_URL ${PKG_URL:-http://download.cloudwiz.cn/package}/opentsdb.tar.gz
 ENV JAVA_HOME /usr/lib/jvm/java
@@ -9,13 +11,14 @@ ENV USER=root
 
 RUN set -x \
     && curl -fSL "$OPENTSDB_URL" -o /tmp/opentsdb.tar.gz \
-    && tar -xvf /tmp/opentsdb.tar.gz -C /opt/ \
+    && mkdir -p ${INSTALL_ROOT} \
+    && tar -xvf /tmp/opentsdb.tar.gz -C ${INSTALL_ROOT} \
     && rm /tmp/opentsdb.tar.gz* \
-    && ln -s /usr/lib/jvm/java  /opt/jdk
+    && ln -s /usr/lib/jvm/java  ${INSTALL_ROOT}/jdk
 
 ADD start.sh /start.sh
 RUN chmod +x /start.sh
 
 EXPOSE 4242
 
-ENTRYPOINT ["/start.sh"]
+ENTRYPOINT /start.sh
